--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-loader-spinner": "^3.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.4.0",
     "typescript": "^3.8.3"
   },
