--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.0",
     "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.4.0",
+    "react-toastify": "^5.5.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
