--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-loader-spinner": "^3.1.0",
+    "@types/react-redux": "^7.1.7",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-loader-spinner": "^3.1.5",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
+    "redux": "^4.0.5",
     "typescript": "^3.8.3"
   },
   "scripts": {
