--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
