--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
@@ -28,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "test:e2e": "cypress run",
     "cypress:open": "cypress open"
@@ -49,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.1.0"
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.4",
+    "cypress": "^4.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3"
   }
 }
